# Brick-Breaker-Game

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Brick-Breaker/: CMakeLists.txt
Brick-Breaker/src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
Brick-Breaker/src/Game/: CMakeLists.txt  Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  SpriteRenderer.h
Brick-Breaker/src/Game/GameObject/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  GameObject.cpp  GameObject.h  Paddle.cpp  Paddle.h  ParticleGenerator.cpp  ParticleGenerator.h
Brick-Breaker/src/Game/Manager/: ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp
Brick-Breaker/src/Game/Process/: GamePostProcessing.cpp  GamePostProcessing.h  Level.cpp  Level.h  MenuWindow.cpp  MenuWindow.h  PowerUps.cpp  PowerUps.h
Brick-Breaker/src/Game/Utility/: ImGuiLayer.h  Rect.cpp  Rect.h  SHADER.cpp  TEXTURE.cpp
Brick-Breaker/src/Game/assets/: CMakeLists.txt
Brick-Breaker/src/Game/assets/levels/: 1level.lvl
Brick-Breaker/src/Game/assets/shaders/: cubeShader.fg  particle.fg  postProcessing.fg  postProcessing.vs
Brick-Breaker/src/Menu/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  LevelMenu.cpp  LevelMenu.h  Menu.cpp  Menu.h
Brick-Breaker/src/Utility/: CMakeLists.txt  ImGuiLayer.cpp  Rect.cpp  Rect.h  SHADER.cpp  SHADER.h  TEXTURE.cpp  VAO.cpp  VAO.h
Brick-Breaker/src/Utility/Manager/: Framebuffer.cpp  Framebuffer.h  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  SpriteRenderer.h
Brick-Breaker/src/Window/: KeyListner.cpp  KeyListner.h  MouseListner.cpp  MouseListner.h  glfw_window.cpp  glfw_window.h
Brick-Breaker/src/assets/: CMakeLists.txt
Brick-Breaker/src/assets/levels/: 10level.lvl  1level.lvl  2level.lvl  4level.lvl  5level.lvl  6level.lvl  7level.lvl  8level.lvl  9level.lvl
Brick-Breaker/src/assets/shaders/: cubeShader.vs  gamelvl_effects.fg  gamelvl_effects.vs
